<resources>
    <string name="app_name">MyCrud</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="not_have_account">Belum punya akun ? Daftar</string>
    <string name="name">Nama</string>
    <string name="have_account">Sudah punya akun ? Login</string>
    <string name="book">Buku</string>
    <string name="my_book">Buku Saya</string>
    <string name="me">Saya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="city">City</string>
    <string name="user">User</string>
    <string name="customer">Customer</string>
</resources>